<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/github_rest_api_viewer"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/querySearchArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView">

        <EditText
            android:id="@+id/searchField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_query"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/searchButton"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="@string/search_query" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="searchByOwner"
            app:layout_constraintLeft_toRightOf="@+id/searchField"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UsingOnClickInXml" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sortArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/querySearchArea">

        <TextView
            android:id="@+id/sortLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/rgSort"
            android:text="@string/sort"/>

        <RadioGroup
            android:id="@+id/rgSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:checkedButton="@id/sortUpdated"
            app:layout_constraintStart_toEndOf="@+id/sortLabel"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sortStars"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="15sp"
                android:text="@string/stars" />

            <RadioButton
                android:id="@+id/sortForks"
                android:layout_height="30dp"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:text="@string/forks" />

            <RadioButton
                android:id="@+id/sortUpdated"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:layout_height="30dp"
                android:text="@string/updated" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orderArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortArea">

        <TextView
            android:id="@+id/orderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/rgOrder"
            android:text="@string/order"/>

        <RadioGroup
            android:id="@+id/rgOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/orderLabel"
            android:checkedButton="@id/orderDesc"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/orderAsc"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="15sp"
                android:text="@string/asc" />

            <RadioButton
                android:id="@+id/orderDesc"
                android:layout_height="30dp"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:text="@string/desc" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderArea" />

</androidx.constraintlayout.widget.ConstraintLayout>